loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:36: error: not found: value orange
}while(getGroundColor() != orange ) 
                           ^